add wide skyscraper on right; left align, instead of center

--- a/git-cheatsheet/1200.css
+++ b/git-cheatsheet/1200.css
@@ -1,7 +1,7 @@
 /* Containers
 ----------------------------------------------------------------------------------------------------*/
 .container_16 {
-	margin-left: auto;
+	margin-left: 20px;
 	margin-right: auto;
 	width: 1200px;
 
